welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:3: error: not found: value nbBiscuits
while (2*nbBiscuits!=nbOrange+1){
         ^